# CommBench

./: CMakeLists.txt  CommBench.h.in  README.md  bench.h  comm.h  commbench.h  kernels.h  main.cpp  spcomm.h  test_DENSE.h  test_FAN.h  test_FULL.h  test_G2G_full.h  test_G2G_rail.h  test_P2G.h  test_P2P.h  test_RAIL.h  test_allgather.h  test_capability.h  test_crusher.h  test_library.h  test_nccl.h  test_nodes.h  test_saturation.h  test_self.h  util.h
CollBench/: coll.h  comm.h  main.cpp
CommFunctions/: .nfs0000000028392f070000000a  CMakeLists.txt  commbench.cpp  commbench.h
CommFunctions/backup/: comm.cpp  comm.h  comm_impl.h  commbench.cpp  commbench.h
IPC_repro/: main.cpp  run.sh
IPC_scatter/: CommBench  main.cpp
examples/: README.md  striping.cpp
examples/application/: 24x24_pattern.txt  32x32_pattern.txt  48x48_pattern.txt  48x48_pattern_inter.txt  Makefile  main.cpp  matrix_0_aurora.txt  matrix_1_aurora.txt  matrix_2_aurora.txt  matrix_3_aurora.txt  run.sh  submit.sh  test_app  test_app.cpp  test_app_file.txt  test_app_file1.txt
examples/application/striping/: main.cu  run.sh
examples/group/: README.md  group.cpp  run.sh
examples/striping/: README.md  striping.cpp
misc/: comm_ipc_ext.h  rebuttal_PPoPP24.md
misc/archive/: rebuttal_PPoPP24.md  rebuttal_SC23.md
misc/pci_bidirectional_chunk/: a.out  pci_bidirectional_chunk.cpp  run.sh
misc/test_coll/: README.md  main.cpp  run.sh  util.h
pyComm/: Makefile  pyComm.cpp  pycomm.py  run.sh  submit_perlmutter.sh  test.py
scripts/: Makefile_aurora  Makefile_crusher  Makefile_delta  Makefile_frontier  Makefile_perlmutter  Makefile_polaris  Makefile_spock  Makefile_summit  Makefile_sunspot  Makefile_thetagpu  build_aws_ofi_rccl.sh  cxi_assign_rr.sh  gpu_tile_compact.sh  run_aurora.sh  run_crusher.sh  run_delta.sh  run_frontier.sh  run_perlmutter.sh  run_polaris.sh  run_spock.sh  run_summit.sh  run_sunspot.sh  run_thetagpu.sh  set_affinity_gpu_polaris.sh  submit_aurora.sh  submit_crusher.sh  submit_delta.sh  submit_frontier.sh  submit_perlmutter.sh  submit_polaris.sh  submit_spock.sh  submit_summit.sh  submit_sunspot.sh  submit_thetagpu.sh  wrapper_spread.sh
test_coll/: .main.cpp.swp  README.md  main.cpp
test_p2p/: README.md  main.cpp
test_pt2pt/: README.md  main.cpp
test_verify/: main.cpp
verification/: Makefile  README.md  coll.h  main.cpp  rebuttal_PPoPP24.md  run.sh  run_frontier  validate.h
